--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -232,4 +232,10 @@
   <data name="icono_ferreteria_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icono-ferreteria_64.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cliente_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cliente_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="estadisticas_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\estadisticas_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
