--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -238,4 +238,28 @@
   <data name="estadisticas_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\estadisticas_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="venta_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\venta_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="venta1_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\venta1_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="compra1_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\compra1_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="compra_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\compra_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logistica1_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logistica1_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logistica_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logistica_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="soporte1_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\soporte1_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="soporte_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\soporte_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
