--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -280,4 +280,13 @@
   <data name="exit_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\exit_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="proveedores_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\proveedores_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="proveedores_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\proveedores_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="proveedores_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\proveedores_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
