--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -481,4 +481,10 @@
   <data name="ClientesMayGris_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ClientesMayGris_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="articulo_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\articulo_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="articulo_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\articulo_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
