--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -487,4 +487,10 @@
   <data name="articulo_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\articulo_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="articuloGris_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\articuloGris_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="articuloGris_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\articuloGris_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
